feature: add postgres settings to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,17 @@ services:
       - .:/app
     ports:
       - 58000:8000
+  postgres:
+    image: postgres:16-alpine
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: restaurant_app
+    ports:
+      - 55432:5432
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+volumes:
+  postgres:
