--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1", features = ["full"] }
 axum = "^0.7.7"
 tower = "^0.5.1"
 serde = { version = "^1.0.210", features = ["derive"] }
+tokio-postgres = "^0.7.12"
