--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ axum = "^0.7.7"
 tower = "^0.5.1"
 serde = { version = "^1.0.210", features = ["derive"] }
 tokio-postgres = "^0.7.12"
+refinery = { version = "^0.8.14", features = ["tokio-postgres"]}
