--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - .:/app
     ports:
       - 58000:8000
+    depends_on:
+      - postgres
   postgres:
     image: postgres:16-alpine
     restart: always
