--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ refinery = { version = "^0.8.14", features = ["tokio-postgres"]}
 bb8 = "^0.8.5"
 bb8-postgres = "^0.8.1"
 rand = "^0.8.5"
+reqwest = { version = "^0.12", features = ["json"] }
