--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - .:/app
     ports:
       - 58000:8000
+    env_file:
+      - .env
     depends_on:
       - postgres
   postgres:
